--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
     <script>
         // URL de l'API Railway
-        const API_URL = 'https://mely-api-production.up.railway.app/api';
+        const API_URL = 'https://mely-api.onrender.com/api';
         
         let currentUser = null;
 
