--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
 
     <script>
-        // URL de l'API Railway
+        // URL de l'API Render
         const API_URL = 'https://mely-api.onrender.com/api';
         
         let currentUser = null;
@@ -266,6 +266,26 @@
                 alert('❌ Veuillez remplir tous les champs');
                 return;
             }
+
+            // Afficher le message de chargement
+            const loginSection = document.getElementById('loginSection');
+            const originalContent = loginSection.innerHTML;
+            loginSection.innerHTML = `
+                <h2>⏳ Connexion en cours...</h2>
+                <div style="text-align: center; padding: 40px;">
+                    <div style="font-size: 60px; animation: spin 2s linear infinite;">⏳</div>
+                    <p style="margin-top: 20px; font-size: 18px; color: #666;">
+                        L'API se réveille, veuillez patienter...<br>
+                        <small>(Cela peut prendre 30-60 secondes la première fois)</small>
+                    </p>
+                </div>
+                <style>
+                    @keyframes spin {
+                        0% { transform: rotate(0deg); }
+                        100% { transform: rotate(360deg); }
+                    }
+                </style>
+            `;
 
             try {
                 const response = await fetch(`${API_URL}/login`, {
@@ -284,10 +304,12 @@
                     };
                     await showDashboard();
                 } else {
+                    loginSection.innerHTML = originalContent;
                     alert('❌ ' + data.message);
                 }
             } catch (error) {
                 console.error('Erreur:', error);
+                loginSection.innerHTML = originalContent;
                 alert('❌ Erreur de connexion au serveur.');
             }
         }
