--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                     <input type="email" id="email" placeholder="votre.email@exemple.com">
                 </div>
                 <div class="form-group">
-                    <label for="code">Code d'accès</label>
-                    <input type="text" id="code" placeholder="Code reçu par email" maxlength="4">
+                    <label for="code">Mot de passe</label>
+                    <input type="password" id="code" placeholder="Mot de passe reçu par email">
                 </div>
                 <button class="btn" onclick="login()">Se connecter</button>
             </div>
