--- a/index.html
+++ b/index.html
@@ -103,6 +103,31 @@
             border-color: #B85C38;
         }
 
+        .password-container {
+            position: relative;
+        }
+
+        .password-container input {
+            padding-right: 45px;
+        }
+
+        .toggle-password {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 20px;
+            padding: 5px;
+            color: #666;
+        }
+
+        .toggle-password:hover {
+            color: #B85C38;
+        }
+
         .btn {
             background: #B85C38;
             color: white;
@@ -220,7 +245,10 @@
                 </div>
                 <div class="form-group">
                     <label for="code">Mot de passe</label>
-                    <input type="password" id="code" placeholder="Mot de passe reçu par email">
+                    <div class="password-container">
+                        <input type="password" id="code" placeholder="Mot de passe reçu par email">
+                        <button type="button" class="toggle-password" onclick="togglePassword()">👁️</button>
+                    </div>
                 </div>
                 <button class="btn" onclick="login()">Se connecter</button>
             </div>
@@ -273,6 +301,19 @@
         const API_URL = 'https://mely-api.onrender.com/api';
         
         let currentUser = null;
+
+        function togglePassword() {
+            const passwordInput = document.getElementById('code');
+            const toggleButton = document.querySelector('.toggle-password');
+            
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                toggleButton.textContent = '🙈';
+            } else {
+                passwordInput.type = 'password';
+                toggleButton.textContent = '👁️';
+            }
+        }
 
         async function login() {
             const email = document.getElementById('email').value;
