--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
     </div>
 
     <script>
-        // URL de l'API Vercel
-        const API_URL = 'https://mely-portail.vercel.app/api';
+        // URL de l'API Render
+        const API_URL = 'https://mely-api-1.onrender.com/api';
         
         let currentUser = null;
 
