--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
     </div>
 
     <script>
-        // URL de l'API Render
-        const API_URL = 'https://mely-api-1.onrender.com/api';
+        // URL de l'API locale via LocalTunnel
+        const API_URL = 'https://mely-ehpad.loca.lt/api';
         
         let currentUser = null;
 
