--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
     </div>
 
     <script>
-        // URL de l'API locale via LocalTunnel
-        const API_URL = 'https://mely-ehpad.loca.lt/api';
+        // URL de l'API via LocalTunnel
+        const API_URL = 'https://giant-bushes-write.loca.lt/api';
         
         let currentUser = null;
 
