--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
     <script>
         // URL de l'API via LocalTunnel
-        const API_URL = 'https://mely-ehpad.loca.lt/api';
+        const API_URL = 'https://light-elephant-44.loca.lt/api';
         
         let currentUser = null;
 
