--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
     </div>
 
     <script>
-        // URL de l'API via LocalTunnel
-        const API_URL = 'https://light-elephant-44.loca.lt/api';
+        // URL de l'API via Cloudflare Tunnel
+        const API_URL = 'https://payroll-insulation-unnecessary-stories.trycloudflare.com/api';
         
         let currentUser = null;
 
