--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
     </div>
 
     <script>
-        // URL de l'API via Cloudflare Tunnel
-        const API_URL = 'https://earned-cheaper-und-quantities.trycloudflare.com/api';
+        // URL de l'API via Render (URL fixe)
+        const API_URL = 'https://mely-api-1.onrender.com/api';
         
         let currentUser = null;
 
