--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
     <script>
         // URL de l'API via Render (URL fixe)
-        const API_URL = 'https://voters-gay-showing-properties.trycloudflare.com/api';
+        const API_URL = 'https://mely-api-1.onrender.com/api';
         
         let currentUser = null;
 
